fixed project list row gap

--- a/app/styles/components/_projects.sass
+++ b/app/styles/components/_projects.sass
@@ -31,6 +31,13 @@
         +flex(flex-start, stretch, column)
         flex-grow: 1
         overflow-y: auto
+
+    .project-row
+        margin-top: 8px
+        margin-bottom: 0px
+
+        &:last-of-type
+            margin-bottom: 8px
 //
 
 .project-row
